--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "7.0.0-beta.44",
+    "@babel/preset-env": "7.0.0-beta.44",
     "@commitlint/cli": "^6.1.3",
     "@commitlint/config-conventional": "^6.1.3",
     "array-uniq": "^1.0.2",
     "autoprefixer": "^8.2.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
+    "babel-loader": "^8.0.0-beta.0",
     "browser-sync": "^2.18.12",
     "browserstack-runner": "^0.7.0",
     "chai": "^4.1.2",
@@ -49,7 +49,7 @@
     "foundation-docs": "git+https://github.com/zurb/foundation-docs.git#7a978ff933086df4826285ea60301937a7e81aad",
     "gulp": "^3.8.10",
     "gulp-add-src": "^1.0.0",
-    "gulp-babel": "^7.0.1",
+    "gulp-babel": "8.0.0-beta.2",
     "gulp-cache-bust": "^1.3.0",
     "gulp-check-deps": "^1.4.1",
     "gulp-clean-css": "^3.4.1",
@@ -139,7 +139,9 @@
       [
         "babelify",
         {
-          "presets": ["env"]
+          "presets": [
+            "@babel/preset-env"
+          ]
         }
       ]
     ]
