--- a/package.json
+++ b/package.json
@@ -113,6 +113,13 @@
     "email": "foundation@zurb.com"
   },
   "keywords": [
+    "css",
+    "scss",
+    "sass",
+    "js",
+    "responsive",
+    "mobile-first",
+    "framework",
     "eyeglass-module",
     "handlebars-helper-rel",
     "handlebars-helper-slugify"
