--- a/bower.json
+++ b/bower.json
@@ -7,24 +7,37 @@
     "dist/js/foundation.js"
   ],
   "ignore": [
-    "config",
-    "docs",
-    "gulp",
-    "lib",
-    "test",
+    ".babelrc",
+    ".browserslistrc",
+    ".commitlintrc.yml",
+    ".editorconfig",
+    ".eslintrc",
+    ".huskyrc.yml",
+    ".jshintrc",
+    ".sass-lint.yml",
+    ".travis.yml",
+    ".versions",
+    "bower.json",
+    "browserstack.json",
+    "code-of-conduct.md",
     "composer.json",
     "CONTRIBUTING.md",
+    "docslink.sh",
     "gulpfile.js",
     "meteor-README.md",
     "package.js",
-    "package.json",
+    "package-lock.json",
     "sache.json",
-    ".editorconfig",
-    ".npm",
-    ".gitignore",
-    ".npmignore",
-    ".versions",
-    ".babelrc",
-    "yarn.lock"
+    "webpack.config.js",
+    "yarn.lock",
+    ".github",
+    "config",
+    "customizer",
+    "docs",
+    "gulp",
+    "lib",
+    "spec",
+    "script",
+    "test"
   ]
 }
