--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,10 @@
     "type": "git",
     "url": "https://github.com/zurb/foundation-sites"
   },
+ "dependencies": {
+   "jquery": ">=2.2.0",
+   "what-input": ">=4.1.0"
+  },
   "ignore": [
     ".babelrc",
     ".browserslistrc",
