fix: fix Bower file invalid JSON #11364
Changes were introduced in https://github.com/zurb/foundation-sites/pull/11350
Closes https://github.com/zurb/foundation-sites/issues/11364

--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,7 @@
     "eyeglass-module"
   ],
   "authors": [
-    "ZURB <foundation@zurb.com> (http://foundation.zurb.com)",
+    "ZURB <foundation@zurb.com> (http://foundation.zurb.com)"
   ],
   "main": [
     "scss/foundation.scss",
