--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "cz-conventional-changelog": "^2.1.0",
     "doiuse": "^4.1.0",
     "foundation-docs": "git+https://github.com/zurb/foundation-docs.git#7a978ff933086df4826285ea60301937a7e81aad",
-    "gulp": "^3.8.10",
+    "gulp": "^4.0.0",
     "gulp-add-src": "^1.0.0",
     "gulp-babel": "8.0.0-beta.2",
     "gulp-cache-bust": "^1.3.0",
@@ -92,6 +92,7 @@
     "sinon": "^6.0.0",
     "supercollider": "^1.4.4",
     "touch": "^3.1.0",
+    "undertaker-forward-reference": "^1.0.2",
     "util-deprecate": "^1.0.2",
     "vinyl": "^2.0.2",
     "vinyl-named": "^1.1.0",
