--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "7.0.0-beta.44",
-    "@babel/preset-env": "7.0.0-beta.44",
+    "@babel/core": "7.0.0-beta.52",
+    "@babel/preset-env": "7.0.0-beta.52",
     "@commitlint/cli": "^7.0.0",
     "@commitlint/config-conventional": "^7.0.1",
     "array-uniq": "^2.0.0",
@@ -47,14 +47,14 @@
     "cz-conventional-changelog": "^2.1.0",
     "doiuse": "^4.1.0",
     "foundation-docs": "git+https://github.com/zurb/foundation-docs.git#7a978ff933086df4826285ea60301937a7e81aad",
-    "gulp": "^3.8.10",
+    "gulp": "^4.0.0",
     "gulp-add-src": "^1.0.0",
     "gulp-babel": "8.0.0-beta.2",
     "gulp-cache-bust": "^1.3.0",
     "gulp-check-deps": "^1.4.1",
     "gulp-clean-css": "^3.4.1",
     "gulp-concat": "^2.4.3",
-    "gulp-eslint": "^4.0.2",
+    "gulp-eslint": "^5.0.0",
     "gulp-filter": "^5.1.0",
     "gulp-if": "^2.0.0",
     "gulp-load-plugins": "^1.5.0",
@@ -67,7 +67,7 @@
     "gulp-rsync": "0.0.8",
     "gulp-sass": "^4.0.1",
     "gulp-sass-lint": "^1.3.2",
-    "gulp-sourcemaps": "^2.6.0",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
     "gulp-zip": "^4.1.0",
     "husky": "^1.0.0-rc.2",
@@ -80,7 +80,6 @@
     "motion-ui": "^2.0.2",
     "multiline": "^1.0.2",
     "octophant": "^1.0.0",
-    "opener": "^1.4.3",
     "panini": "^1.6.2",
     "parker": "^1.0.0-alpha.0",
     "prettyjson": "^1.1.3",
@@ -92,13 +91,14 @@
     "sinon": "^6.0.0",
     "supercollider": "^1.4.4",
     "touch": "^3.1.0",
+    "undertaker-forward-reference": "^1.0.2",
     "util-deprecate": "^1.0.2",
     "vinyl": "^2.0.2",
     "vinyl-named": "^1.1.0",
     "webpack": "^4.5.0",
     "webpack-stream": "^4.0.3",
     "what-input": ">=4.1.0",
-    "yargs": "^11.0.0"
+    "yargs": "^12.0.1"
   },
   "engines": {
     "node": ">=6.4.0",
