chore: update dependencies (2018-07-26)
| Package           | From          | To            |
| :---------------- | :------------ | :------------ |
| @babel/core       | 7.0.0-beta.52 | 7.0.0-beta.54 |
| @babel/preset-env | 7.0.0-beta.52 | 7.0.0-beta.54 |
| autoprefixer      | ^8.2.0        | 9.0.1         |
| webpack-stream    | ^4.0.3        | 5.0.0         |

--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "7.0.0-beta.52",
-    "@babel/preset-env": "7.0.0-beta.52",
+    "@babel/core": "^7.0.0-beta.54",
+    "@babel/preset-env": "^7.0.0-beta.54",
     "@commitlint/cli": "^7.0.0",
     "@commitlint/config-conventional": "^7.0.1",
     "array-uniq": "^2.0.0",
-    "autoprefixer": "^8.2.0",
+    "autoprefixer": "^9.0.1",
     "babel-loader": "^8.0.0-beta.0",
     "browser-sync": "^2.18.12",
     "browserstack-runner": "^0.7.0",
@@ -96,7 +96,7 @@
     "vinyl": "^2.0.2",
     "vinyl-named": "^1.1.0",
     "webpack": "^4.5.0",
-    "webpack-stream": "^4.0.3",
+    "webpack-stream": "^5.0.0",
     "what-input": ">=4.1.0",
     "yargs": "^12.0.1"
   },
