chore: use a more tree-shaking compliant ESM entry file

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "6.4.3",
   "main": "dist/js/foundation.js",
   "browser": "dist/js/foundation.js",
-  "module": "js/entries/foundation.js",
-  "jsnext:main": "js/entries/foundation.js",
+  "module": "js/foundation.js",
+  "jsnext:main": "js/foundation.js",
   "typings": "dist/js/foundation.d.ts",
   "description": "The most advanced responsive front-end framework in the world.",
   "author": "ZURB <foundation@zurb.com> (http://foundation.zurb.com)",
