fix: prevent sasslint warning when using qualifying element with class

--- a/.sass-lint.yml
+++ b/.sass-lint.yml
@@ -114,7 +114,7 @@ rules:
   no-qualifying-elements:
     - 1
     - allow-element-with-attribute: false
-      allow-element-with-class: false
+      allow-element-with-class: true
       allow-element-with-id: false
 
   no-trailing-zero: 1
