--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "module": "js/foundation.js",
   "jsnext:main": "js/foundation.js",
   "typings": "dist/js/foundation.d.ts",
+  "sideEffects": false,
   "description": "The most advanced responsive front-end framework in the world.",
   "author": "ZURB <foundation@zurb.com> (http://foundation.zurb.com)",
   "homepage": "http://foundation.zurb.com/sites",
