--- a/package.json
+++ b/package.json
@@ -30,15 +30,15 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.54",
-    "@babel/preset-env": "^7.0.0-beta.54",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
     "@commitlint/cli": "^7.0.0",
     "@commitlint/config-conventional": "^7.0.1",
     "array-uniq": "^2.0.0",
     "autoprefixer": "^9.0.1",
-    "babel-loader": "^8.0.0-beta.0",
+    "babel-loader": "^8.0.2",
     "browser-sync": "^2.18.12",
-    "browserstack-runner": "^0.7.0",
+    "browserstack-runner": "^0.9.0",
     "chai": "^4.1.2",
     "chai-jquery": "^2.0.0",
     "chalk": "^2.3.2",
@@ -49,7 +49,7 @@
     "foundation-docs": "git+https://github.com/zurb/foundation-docs.git#7a978ff933086df4826285ea60301937a7e81aad",
     "gulp": "^4.0.0",
     "gulp-add-src": "^1.0.0",
-    "gulp-babel": "8.0.0-beta.2",
+    "gulp-babel": "^8.0.0",
     "gulp-cache-bust": "^1.3.0",
     "gulp-check-deps": "^1.4.1",
     "gulp-clean-css": "^3.4.1",
@@ -60,7 +60,7 @@
     "gulp-load-plugins": "^1.5.0",
     "gulp-newer": "^1.1.0",
     "gulp-plumber": "^1.0.1",
-    "gulp-postcss": "^7.0.0",
+    "gulp-postcss": "^8.0.0",
     "gulp-prompt": "^1.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^1.0.0",
