--- a/shrinkwrap.yaml
+++ b/shrinkwrap.yaml
@@ -9667,6 +9667,7 @@ packages:
     hasBin: true
     resolution:
       integrity: sha1-myzl094C0XxgEq0yaqa00M9U+U8=
+      tarball: 'http://registry.npmjs.org/semver/-/semver-5.3.0.tgz'
   /semver/5.5.0:
     dev: true
     hasBin: true
