--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ os:
   - osx
 
 node_js:
-  - lts/boron
-  - lts/carbon
-  - stable
+  - 6
+  - 8
+  - 10
 
 env:
   - ZF_TRAVIS_COMMAND=test:javascript:units
@@ -16,13 +16,13 @@ env:
 matrix:
   include:
     - os: windows
-      node_js: stable
+      node_js: 10
       env: ZF_TRAVIS_COMMAND=test:javascript:browserstack
     - os: linux
-      node_js: stable
+      node_js: 10
       env: ZF_TRAVIS_COMMAND=test:javascript:browserstack
     - os: osx
-      node_js: stable
+      node_js: 10
       env: ZF_TRAVIS_COMMAND=test:javascript:browserstack
 
 before_install: npm install -g npm@latest
