--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,11 @@ language: node_js
 matrix:
   include:
   - node_js: "lts/boron"
-    env: ZF_TRAVIS_COMMAND=test:javascript:units
+    env: ZF_TRAVIS_COMMAND=test
   - node_js: "lts/carbon"
-    env: ZF_TRAVIS_COMMAND=test:javascript:units
+    env: ZF_TRAVIS_COMMAND=test
   - node_js: "stable"
-    env: ZF_TRAVIS_COMMAND=test:javascript:units
+    env: ZF_TRAVIS_COMMAND=test
   - node_js: "stable"
     env: ZF_TRAVIS_COMMAND=test:javascript:browserstack
 
