--- a/package.json
+++ b/package.json
@@ -81,7 +81,6 @@
     "mocha": "^5.0.5",
     "mocha-headless-chrome": "^2.0.0",
     "motion-ui": "^2.0.2",
-    "multiline": "^1.0.2",
     "octophant": "^1.0.0",
     "panini": "^1.6.2",
     "parker": "^1.0.0-alpha.0",
@@ -94,6 +93,7 @@
     "sass-true": "^4.0.0",
     "sassy-lists": "^3.0.1",
     "sinon": "^6.0.0",
+    "strip-indent": "^2.0.0",
     "supercollider": "^1.4.4",
     "touch": "^3.1.0",
     "undertaker-forward-reference": "^1.0.2",
