chore: update dependencies (2018-10-24)
Major bump:

| Package                         | From        | To          |
| :------------------------------ | :---------- | :---------- |
| husky                           |  1.0.0-rc.2 |       1.0.0 |
| sinon                           |       6.3.5 |       7.0.0 |

Minor bump:

| Package                         | From        | To          |
| :------------------------------ | :---------- | :---------- |
| rollup                          |      0.65.2 |      0.66.6 |

Also, this commit relock devDependencies and update all sub-devDependencies.

Closes https://github.com/zurb/foundation-sites/issues/11555

--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
     "gulp-zip": "^4.1.0",
-    "husky": "^1.0.0-rc.2",
+    "husky": "^1.1.2",
     "inquirer": "^6.0.0",
     "is-empty-object": "^1.1.1",
     "jquery": "^3.3.1",
@@ -92,7 +92,7 @@
     "run-sequence": "^2.2.1",
     "sass-true": "^4.0.0",
     "sassy-lists": "^3.0.1",
-    "sinon": "^6.0.0",
+    "sinon": "^7.0.0",
     "strip-indent": "^2.0.0",
     "supercollider": "^1.4.4",
     "touch": "^3.1.0",
