fix: disable Yarn GPG so it doesn't prevent the Travis build to finish
See https://travis-ci.community/t/build-doesnt-finish-after-completing-tests/288

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,10 @@ node_js:
   - 11
 
 env:
-  - ZF_TRAVIS_COMMAND=test
+  global:
+    - YARN_GPG=no
+  matrix:
+    - ZF_TRAVIS_COMMAND=test
 
 matrix:
   include:
