Use pull request #11618 from ncoden/chore/fix-externals-config for v6.5.0
4d9270f0f chore: fix plugins UMD external names
7f5aa78c2 docs: add documentation for the webpack UMD configuration
4124057ca chore: fix plugins' UMD root variables names
3fa67416e test: add test for imports via AMD
91353dba1 docs: improve description for the webpack externals config in build script
a69a577ea docs: improve docs for the root namespace in build script
5e422093c docs: improve docs of the "getUmdEntry" build utility

Signed-off-by: Nicolas Coden <nicolas@ncoden.fr>

--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "homepage": "http://foundation.zurb.com/sites",
   "scripts": {
     "start": "gulp",
-    "test": "npm run test:sass && npm run test:javascript:units",
+    "test": "npm run test:sass && npm run test:javascript:units && npm run test:bundle",
     "test:ci": "npm run test:sass && npm run test:javascript:ci",
     "test:sass": "mocha test/sass/test_sass.js --colors",
     "test:javascript:transpile": "gulp sass:foundation --color && gulp test:transpile-js --color",
     "test:javascript:units": "npm run test:javascript:transpile && mocha-headless-chrome -a ignore-resource-errors -a no-sandbox -f test/javascript/index.html",
     "test:javascript:browserstack": "npm run test:javascript:transpile && browserstack-runner",
     "test:javascript:ci": "npm run test:javascript:transpile && mocha-headless-chrome -a ignore-resource-errors -a no-sandbox -f test/javascript/index.html && browserstack-runner",
+    "test:bundle": "mocha-headless-chrome -a ignore-resource-errors -a no-sandbox -f test/bundle/index.html",
     "test:visual": "gulp test --color",
     "lockdeps": "npm i && rimraf yarn.lock && yarn import && rimraf shrinkwrap.yaml && pnpm import",
     "relockdeps": "rimraf package-lock.json && npm run lockdeps",
@@ -86,6 +87,7 @@
     "parker": "^1.0.0-alpha.0",
     "prettyjson": "^1.1.3",
     "require-dir": "^1.0.0",
+    "requirejs": "^2.3.6",
     "rimraf": "^2.6.1",
     "rollup": "^0.65.2",
     "rollup-plugin-babel": "^4.0.3",
