--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ matrix:
       node_js: stable
       env: ZF_TRAVIS_COMMAND=test:javascript:browserstack
 
-install: yarn
+install: yarn --network-timeout 1000000
 script: yarn run $ZF_TRAVIS_COMMAND
 
 notifications:
