--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:javascript:ci": "npm run test:javascript:transpile && mocha-headless-chrome -a ignore-resource-errors -a no-sandbox -f test/javascript/index.html && browserstack-runner",
     "test:bundle": "mocha-headless-chrome -a ignore-resource-errors -a no-sandbox -f test/bundle/index.html",
     "test:visual": "gulp test --color",
-    "lockdeps": "npm i && rimraf yarn.lock && yarn import && rimraf shrinkwrap.yaml && pnpm import",
+    "lockdeps": "npm i && npm-force-resolutions && rimraf yarn.lock && yarn import && rimraf shrinkwrap.yaml && pnpm import",
     "relockdeps": "rimraf package-lock.json && npm run lockdeps",
     "deploy": "gulp deploy --color",
     "deploy:prep": "gulp deploy:prep --color",
@@ -81,6 +81,7 @@
     "mocha": "^5.0.5",
     "mocha-headless-chrome": "^2.0.1",
     "motion-ui": "^2.0.2",
+    "npm-force-resolutions": "0.0.2",
     "octophant": "^1.0.0",
     "panini": "^1.6.2",
     "parker": "^1.0.0-alpha.0",
