--- a/package.json
+++ b/package.json
@@ -104,8 +104,7 @@
     "vinyl-named": "^1.1.0",
     "webpack": "^4.28.4",
     "webpack-stream": "^5.2.1",
-    "what-input": ">=4.1.0",
-    "yargs": "^12.0.5"
+    "what-input": ">=4.1.0"
   },
   "resolutions": {
     "puppeteer": "^1.11.0"
