--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "browserstack-runner": "^0.9.0",
     "chai": "^4.1.2",
     "chai-jquery": "^2.1.0",
-    "chalk": "^2.4.2",
     "clipboard": "^2.0.4",
     "corejs-typeahead": "^1.1.1",
     "cz-conventional-changelog": "^2.1.0",
@@ -78,6 +77,7 @@
     "is-empty-object": "^1.1.1",
     "jquery": "^3.3.1",
     "js-yaml": "^3.12.1",
+    "kleur": "^3.0.2",
     "mocha": "^5.0.5",
     "mocha-headless-chrome": "^2.0.1",
     "motion-ui": "^2.0.2",
