--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "corejs-typeahead": "^1.1.1",
     "doiuse": "^2.6.0",
     "foundation-docs": "git+https://github.com/zurb/foundation-docs.git#60e24283f3d578a97a8507b2263cb685948613b1",
-    "gulp": "^3.8.10",
+    "gulp": "4.0",
     "gulp-add-src": "^0.2.0",
     "gulp-babel": "^6.1.1",
     "gulp-cache-bust": "~1.0.2",
@@ -70,7 +70,7 @@
     "gulp-replace": "^0.5.4",
     "gulp-rsync": "^0.0.7",
     "gulp-ruby-sass": "^2.0.6",
-    "gulp-sass": "^2.1.0",
+    "gulp-sass": "^4.0.2",
     "gulp-sass-lint": "^1.3.2",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^2.1.2",
