--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "corejs-typeahead": "^1.1.1",
     "cz-conventional-changelog": "^2.1.0",
     "doiuse": "~4.1.0",
-    "foundation-docs": "github:zurb/foundation-docs#e000277002f9546b0aeedc8f555596dece3bb56e",
+    "foundation-docs": "github:foundation/foundation-docs#e000277002f9546b0aeedc8f555596dece3bb56e",
     "gulp": "^4.0.0",
     "gulp-add-src": "^1.0.0",
     "gulp-babel": "^8.0.0",
@@ -115,10 +115,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/zurb/foundation-sites"
+    "url": "https://github.com/foundation/foundation-sites"
   },
   "bugs": {
-    "url": "https://github.com/zurb/foundation-sites/issues",
+    "url": "https://github.com/foundation/foundation-sites/issues",
     "email": "foundation@zurb.com"
   },
   "keywords": [
