--- a/package.json
+++ b/package.json
@@ -15,10 +15,9 @@
     "test:ci": "npm run test:sass && npm run test:javascript:ci",
     "test:sass": "mocha test/sass/test_sass.js --colors",
     "test:javascript:transpile": "gulp sass:foundation --color && gulp test:transpile-js --color",
-    "test:javascript:server": "http-server -p 3042 . > /dev/null 2>&1 &",
-    "test:javascript:units": "npm run test:javascript:transpile && npm run test:javascript:server && mocha-headless-chrome -a ignore-resource-errors -a no-sandbox -f test/javascript/index.html",
-    "test:javascript:browserstack": "npm run test:javascript:transpile && npm run test:javascript:server && browserstack-runner",
-    "test:javascript:ci": "npm run test:javascript:transpile && npm run test:javascript:server && mocha-headless-chrome -a ignore-resource-errors -a no-sandbox -f test/javascript/index.html && browserstack-runner",
+    "test:javascript:units": "npm run test:javascript:transpile && mocha-headless-chrome -a ignore-resource-errors -a no-sandbox -f test/javascript/index.html",
+    "test:javascript:browserstack": "npm run test:javascript:transpile && browserstack-runner",
+    "test:javascript:ci": "npm run test:javascript:transpile && mocha-headless-chrome -a ignore-resource-errors -a no-sandbox -f test/javascript/index.html && browserstack-runner",
     "test:bundle": "mocha-headless-chrome -a ignore-resource-errors -a no-sandbox -f test/bundle/index.html",
     "test:visual": "gulp test --color",
     "lockdeps": "npm i && npm-force-resolutions && rimraf yarn.lock && yarn import && rimraf shrinkwrap.yaml && pnpm import",
@@ -73,7 +72,7 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
     "gulp-zip": "^4.1.0",
-    "http-server": "^0.12.0",
+    "http-server": "^0.11.1",
     "husky": "^1.3.1",
     "inquirer": "^6.2.1",
     "is-empty-object": "^1.1.1",
