--- a/package.nuspec
+++ b/package.nuspec
@@ -3,16 +3,16 @@
 
     <metadata>
         <id>foundation-sites</id>
-        <version>6.5.3</version>
+        <version>6.6.1</version>
 
-        <title>ZURB Foundation</title>
-        <authors>ZURB</authors>
+        <title>Foundation for Sites</title>
+        <authors>Yetinauts</authors>
         <description>The most advanced responsive front-end framework in the world.</description>
         <tags>css scss sass js responsive mobile-first framework</tags>
 
         <projectUrl>http://foundation.zurb.com/sites</projectUrl>
         <iconUrl>https://foundation.zurb.com/assets/img/icons/foundation-favicon.ico</iconUrl>
-        <releaseNotes>https://github.com/zurb/foundation-sites/releases/tag/v6.5.3</releaseNotes>
+        <releaseNotes>https://github.com/zurb/foundation-sites/releases/tag/v6.6.1</releaseNotes>
         <licenseUrl>https://github.com/zurb/foundation-sites/blob/develop/LICENSE</licenseUrl>
         <copyright>Copyright 2017-2018</copyright>
         <repository type="git" url="https://github.com/zurb/foundation-sites"/>
