--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,17 @@ matrix:
       env: ZF_TRAVIS_COMMAND=test:javascript:browserstack
 
 install: yarn --network-timeout 1000000
-script: yarn run $ZF_TRAVIS_COMMAND
 
 notifications:
   email: false
+
+addons:
+  sonarcloud:
+    organization: "foundation"
+    token:
+      secure: "fpM3TZBgQuldxRv2ND+gf4mjH2TMRdJSJd3xSOwKvjWW1X+mbWHIAjBZ11CQOx1bI945VgcA8pWwQYbzpPfLsq0XtKM7R0n6swMuuLRpN+T20vlZG4xkm3t7rhTTJKpm6yDutTYAygyMlBGig7DEK6FiZMTuqT7mm0cReAgCI64="
+
+script:
+  # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
+  - sonar-scanner
+  - yarn run $ZF_TRAVIS_COMMAND
