--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,4 +44,7 @@ jobs:
       - name: install dependencies
         run: yarn
       - name: run tests with browserstack
+        env: # Or as an environment variable
+          BROWSERSTACK_KEY: ${{ secrets.BROWSERSTACK_KEY }}
+          BROWSERSTACK_USERNAME: ${{ secrets.BROWSERSTACK_USERNAME }}
         run: yarn test:javascript:browserstack
