chore: cleanup package.json

--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "@babel/preset-env": "^7.2.3",
     "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "^7.3.1",
-    "array-uniq": "^2.0.0",
     "autoprefixer": "^9.4.5",
     "babel-loader": "^8.0.5",
     "browser-sync": "^2.18.12",
@@ -85,7 +84,7 @@
     "mocha": "^5.0.5",
     "mocha-headless-chrome": "^2.0.1",
     "motion-ui": "^2.0.2",
-    "npm-force-resolutions": "0.0.2",
+    "node-sass": "^4.12.0",
     "octophant": "^1.0.0",
     "panini": "^1.6.2",
     "prettyjson": "^1.1.3",
