build: patch browserstack-runner
Wait until the downloaded file handle is closed.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,8 @@ jobs:
         run: apt-get update && apt-get install -y gconf-service libasound2 libatk1.0-0 libatk-bridge2.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 libnspr4 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 ca-certificates fonts-liberation libappindicator1 libnss3 lsb-release xdg-utils wget
       - name: install dependencies
         run: yarn
+      - name: patch packages
+        run: yarn patch-package
       - name: run tests with browserstack
         env: # Or as an environment variable
           BROWSERSTACK_KEY: ${{ secrets.BROWSERSTACK_KEY }}
@@ -29,6 +31,8 @@ jobs:
         run: apt-get update && apt-get install -y gconf-service libasound2 libatk1.0-0 libatk-bridge2.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 libnspr4 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 ca-certificates fonts-liberation libappindicator1 libnss3 lsb-release xdg-utils wget
       - name: install dependencies
         run: yarn
+      - name: patch packages
+        run: yarn patch-package
       - name: run tests
         run: yarn test:single-process
 
@@ -46,5 +50,7 @@ jobs:
           node-version: ${{ matrix.node }}
       - name: install dependencies
         run: yarn
+      - name: patch packages
+        run: yarn patch-package
       - name: run tests
         run: yarn test
