--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,18 +3,6 @@ name: CI
 on: [push, pull_request]
 
 jobs:
-  snyk_test:
-    name: Snyk monitor
-    runs-on: ubuntu-latest
-    container: node:latest
-    steps:
-      - name: install snyk
-        run: yarn global add snyk
-      - name: run monitor
-        env:
-          SNYK_TOKEN: 18718bf9-b4b2-463f-b727-e9eb06e336bf
-        run: snyk monitor
-
   build_latest_browserstack:
     name: Node latest with browserstack
     runs-on: ubuntu-latest
@@ -28,7 +16,7 @@ jobs:
       - name: patch packages
         run: yarn patch-package
       - name: run tests with browserstack
-        env:
+        env: # Or as an environment variable
           BROWSERSTACK_KEY: ${{ secrets.BROWSERSTACK_KEY }}
           BROWSERSTACK_USERNAME: ${{ secrets.BROWSERSTACK_USERNAME }}
         run: yarn test:javascript:browserstack
