--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "jquery": "^3.3.1",
     "js-yaml": "^3.12.1",
     "kleur": "^3.0.2",
-    "mocha": "^5.0.5",
+    "mocha": "^8.2.1",
     "mocha-headless-chrome": "^2.0.1",
     "motion-ui": "^2.0.2",
     "octophant": "^1.0.0",
@@ -160,5 +160,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "glob": "^7.1.6"
   }
 }
