--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^1.0.0",
     "gulp-rsync": "0.0.8",
-    "gulp-sass": "^4.0.1",
+    "gulp-sass": "^4.1.1",
     "gulp-sass-lint": "^1.3.2",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
@@ -160,5 +160,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "puppeteer": "^1.11.0"
   }
 }
