--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "mocha": "^5.0.5",
     "mocha-headless-chrome": "^2.0.1",
     "motion-ui": "^2.0.2",
+    "node-sass": "^6.0.1",
     "octophant": "^1.0.0",
     "panini": "^1.6.2",
     "patch-package": "^6.2.1",
