--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
     "test:bundle:single-process": "mocha-headless-chrome -a ignore-resource-errors -a single-process -a no-sandbox -a disable-setuid-sandbox -a disable-dev-shm-usage -f test/bundle/index.html",
     "test:visual": "gulp test --color",
     "deploy": "gulp deploy --color",
-    "deploy:prep": "gulp deploy:prep --color",
-    "deploy:docs": "gulp deploy:docs --color",
-    "deploy:beta": "gulp deploy:beta --color"
+    "deploy:prep": "gulp deploy:prep --color"
   },
   "peerDependencies": {
     "jquery": ">=2.2.0",
@@ -40,7 +38,6 @@
     "@babel/preset-env": "^7.2.3",
     "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "^7.3.1",
-    "array-uniq": "^2.0.0",
     "autoprefixer": "^9.4.5",
     "babel-loader": "^8.0.5",
     "browser-sync": "^2.18.12",
@@ -66,17 +63,14 @@
     "gulp-newer": "^1.1.0",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
-    "gulp-prompt": "^1.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^1.0.0",
-    "gulp-rsync": "0.0.8",
     "gulp-sass": "^4.1.1",
     "gulp-sass-lint": "^1.4.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
     "gulp-zip": "^4.1.0",
     "husky": "^1.3.1",
-    "inquirer": "^6.2.1",
     "is-empty-object": "^1.1.1",
     "jquery": "^3.3.1",
     "js-yaml": "^3.12.1",
