--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "panini": "^1.7.2",
     "patch-package": "^6.2.1",
     "prettyjson": "^1.1.3",
+    "puppeteer": "^1.11.0",
     "require-dir": "^1.2.0",
     "requirejs": "^2.3.6",
     "rollup": "^1.1.0",
@@ -162,8 +163,5 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
-  },
-  "dependencies": {
-    "puppeteer": "^1.11.0"
   }
 }
