docs: link to github discussions

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
   "support": {
     "email": "contact@get.foundation",
     "issues": "https://github.com/foundation/foundation-sites/issues",
-    "forum": "https://foundation.discourse.group"
+    "forum": "https://github.com/foundation/foundation-sites/discussions"
   },
   "license": "MIT"
 }
