--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   },
   "peerDependencies": {
     "jquery": ">=3.6.0",
-    "what-input": ">=5.2.10"
+    "what-input": ">=5.2.10",
+    "motion-ui": "latest"
   },
   "license": "MIT",
   "devDependencies": {
@@ -72,15 +73,13 @@
     "gulp-zip": "^4.1.0",
     "husky": "^1.3.1",
     "is-empty-object": "^1.1.1",
-    "jquery": "^3.3.1",
     "js-yaml": "^3.12.1",
     "kleur": "^3.0.2",
     "mocha": "^5.0.5",
     "mocha-headless-chrome": "^2.0.1",
-    "motion-ui": "^2.0.2",
     "node-sass": "^6.0.1",
     "octophant": "^1.0.0",
-    "panini": "^1.7.2",
+    "panini": "latest",
     "patch-package": "^6.2.1",
     "prettyjson": "^1.1.3",
     "puppeteer": "^1.11.0",
@@ -93,7 +92,7 @@
     "sassy-lists": "^3.0.1",
     "sinon": "^7.2.2",
     "strip-indent": "^2.0.0",
-    "supercollider": "^1.5.3",
+    "supercollider": "latest",
     "touch": "^3.1.0",
     "undertaker-forward-reference": "^1.0.2",
     "util-deprecate": "^1.0.2",
@@ -101,8 +100,10 @@
     "vinyl-named": "^1.1.0",
     "webpack": "^4.28.4",
     "webpack-stream": "^5.2.1",
-    "what-input": ">=4.1.0",
-    "yargs": "^13.3.0"
+    "yargs": "^13.3.0",
+    "jquery": ">=3.6.0",
+    "what-input": ">=5.2.10",
+    "motion-ui": "latest"
   },
   "resolutions": {
     "puppeteer": "^1.11.0",
