Move latest to node 14

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,11 @@ on: [push, pull_request]
 
 jobs:
   build_latest_browserstack:
-    name: Node latest with browserstack
+    name: Node 14 with browserstack
     runs-on: ubuntu-latest
-    container: node:latest
+    strategy:
+      matrix:
+        node-version: [14.x] # latest (16) not functional
     steps:
       - uses: actions/checkout@v1
       - name: install system dependencies
@@ -22,9 +24,11 @@ jobs:
         run: yarn test:javascript:browserstack
 
   build_latest:
-    name: Node latest
+    name: Node 14
     runs-on: ubuntu-latest
-    container: node:current
+    strategy:
+      matrix:
+        node-version: [14.x] # latest (16) not functional
     steps:
       - uses: actions/checkout@v1
       - name: install system dependencies
