--- a/package.json
+++ b/package.json
@@ -66,11 +66,12 @@
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^1.0.0",
-    "gulp-sass": "^4.1.1",
+    "gulp-sass": "^5.1.0",
     "gulp-sass-lint": "^1.4.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
     "gulp-zip": "^4.1.0",
+    "gulp4-run-sequence": "^1.0.2",
     "husky": "^1.3.1",
     "is-empty-object": "^1.1.1",
     "jquery": ">=3.6.0",
@@ -78,8 +79,7 @@
     "kleur": "^3.0.2",
     "mocha": "^5.0.5",
     "mocha-headless-chrome": "^2.0.1",
-    "motion-ui": "latest",
-    "node-sass": "^7.0.0",
+    "motion-ui": "^2.0.5",
     "octophant": "^1.0.0",
     "panini": "latest",
     "patch-package": "^6.2.1",
@@ -89,8 +89,8 @@
     "requirejs": "^2.3.6",
     "rollup": "^1.1.0",
     "rollup-plugin-babel": "^4.3.0",
-    "run-sequence": "^2.2.1",
-    "sass-true": "^4.0.0",
+    "sass": "^1.65.1",
+    "sass-true": "^7.0.0",
     "sassy-lists": "^3.0.1",
     "sinon": "^7.2.2",
     "strip-indent": "^2.0.0",
@@ -108,13 +108,12 @@
   "resolutions": {
     "puppeteer": "^1.11.0",
     "glob-parent": "^5.1.2",
-    "marked": "^2",
-    "node-sass": "^6.0.1",
     "lodash": "^4.17.21",
     "minimist": "^1.2.3",
     "dot-prop": "^5.2.0",
     "trim-newlines": "^3.0.1",
-    "axios": ">=0.21.2"
+    "axios": ">=0.21.2",
+    "lodash.template": ">=4.5.0"
   },
   "engines": {
     "node": ">=12.0"
@@ -166,5 +165,8 @@
       "path": "./node_modules/cz-conventional-changelog"
     }
   },
-  "dependencies": {}
+  "dependencies": {
+    "axios": ">=0.21.2",
+    "minimist": "^1.2.3"
+  }
 }
