chore: update dependencies to stay up with the times

--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.2.3",
-    "@commitlint/cli": "^8.1.0",
-    "@commitlint/config-conventional": "^7.3.1",
-    "autoprefixer": "^9.4.5",
-    "babel-loader": "^8.0.5",
+    "@babel/core": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
+    "@commitlint/cli": "^17.7.1",
+    "@commitlint/config-conventional": "^17.7.0",
+    "autoprefixer": "^10.4.15",
+    "babel-loader": "^9.1.3",
     "browser-sync": "^2.29.3",
     "browserstack-runner": "^0.9.4",
     "chai": "^4.3.7",
@@ -63,7 +63,7 @@
     "gulp-load-plugins": "^1.5.0",
     "gulp-newer": "^1.1.0",
     "gulp-plumber": "^1.2.1",
-    "gulp-postcss": "^8.0.0",
+    "gulp-postcss": "^9.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^1.0.0",
     "gulp-sass": "^5.1.0",
@@ -83,6 +83,7 @@
     "octophant": "^1.0.0",
     "panini": "latest",
     "patch-package": "^6.2.1",
+    "postcss": "^8.4.28",
     "prettyjson": "^1.1.3",
     "puppeteer": "^1.11.0",
     "require-dir": "^1.2.0",
