--- a/package.json
+++ b/package.json
@@ -45,9 +45,9 @@
     "browserstack-runner": "^0.9.4",
     "chai": "^4.3.7",
     "chai-jquery": "^2.1.0",
-    "clipboard": "^2.0.4",
-    "corejs-typeahead": "^1.1.1",
-    "cz-conventional-changelog": "^2.1.0",
+    "clipboard": "^2.0.11",
+    "corejs-typeahead": "^1.3.3",
+    "cz-conventional-changelog": "^3.3.0",
     "doiuse": "^6.0.2",
     "foundation-docs": "github:foundation/foundation-docs",
     "gulp": "^4.0.0",
@@ -57,22 +57,22 @@
     "gulp-check-deps": "^1.4.1",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.4.3",
-    "gulp-eslint": "^5.0.0",
-    "gulp-filter": "^5.1.0",
-    "gulp-if": "^2.0.0",
-    "gulp-load-plugins": "^1.5.0",
+    "gulp-eslint": "^6.0.0",
+    "gulp-filter": "^7.0.0",
+    "gulp-if": "^3.0.0",
+    "gulp-load-plugins": "^2.0.8",
     "gulp-newer": "^1.1.0",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^9.0.1",
-    "gulp-rename": "^1.2.2",
+    "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-sass-lint": "^1.4.0",
-    "gulp-sourcemaps": "^2.6.4",
+    "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.0",
-    "gulp-zip": "^4.1.0",
+    "gulp-zip": "^5.1.0",
     "gulp4-run-sequence": "^1.0.2",
-    "husky": "^1.3.1",
+    "husky": "^8.0.3",
     "is-empty-object": "^1.1.1",
     "jquery": ">=3.6.0",
     "js-yaml": "^3.12.1",
@@ -96,15 +96,12 @@
     "sinon": "^7.2.2",
     "strip-indent": "^2.0.0",
     "supercollider": "latest",
-    "touch": "^3.1.0",
     "undertaker-forward-reference": "^1.0.2",
-    "util-deprecate": "^1.0.2",
-    "vinyl": "^2.0.2",
+    "vinyl": "^3.0.0",
     "vinyl-named": "^1.1.0",
     "webpack": "^5.88.2",
     "webpack-stream": "^7.0.0",
-    "what-input": ">=5.2.10",
-    "yargs": "^13.3.0"
+    "what-input": ">=5.2.10"
   },
   "resolutions": {
     "puppeteer": "^1.11.0",
@@ -167,8 +164,5 @@
       "path": "./node_modules/cz-conventional-changelog"
     }
   },
-  "dependencies": {
-    "axios": ">=0.21.2",
-    "minimist": "^1.2.3"
-  }
+  "dependencies": {}
 }
