--- a/.huskyrc.yml
+++ b/.huskyrc.yml
@@ -1,5 +1,5 @@
 hooks:
-  commit-msg:
+  commit-msg: >
     node ./script/husky-commit-lint.js --color -e $GIT_PARAMS
   pre-push:
     node ./script/husky-push-test.js  --color
