--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,11 +4,11 @@ on: [push, pull_request]
 
 jobs:
   build_latest_browserstack:
-    name: Node 14 with browserstack
+    name: Node Latest with browserstack
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: ['14'] # latest (16+) not functional
+        node: ['20']
     steps:
       - uses: actions/checkout@v1
       - name: install system dependencies
@@ -24,11 +24,11 @@ jobs:
         run: yarn test:javascript:browserstack
 
   build_latest:
-    name: Node 14
+    name: Node Latest
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: ['14'] # latest (16+) not functional
+        node: ['20'] # latest (16+) not functional
     steps:
       - uses: actions/checkout@v1
       - name: install system dependencies
@@ -44,7 +44,7 @@ jobs:
     strategy:
       matrix:
         platform: [ubuntu-latest, macos-latest, windows-latest]
-        node: [ '12', '14' ]
+        node: [ '16', '18' ]
     name: Node ${{ matrix.node }} (${{ matrix.platform }})
     runs-on: ${{ matrix.platform }}
     steps:
