--- a/package.json
+++ b/package.json
@@ -91,9 +91,10 @@
     "requirejs": "^2.3.6",
     "rollup": "^1.1.0",
     "rollup-plugin-babel": "^4.3.0",
-    "sass": "^1.65.1",
     "sass-true": "^7.0.0",
     "sassy-lists": "^3.0.1",
+    "sass": "^1.77.8",
+    "sass-embedded": "^1.77.8",
     "sinon": "^7.2.2",
     "strip-indent": "^2.0.0",
     "supercollider": "latest",
@@ -161,6 +162,5 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
-  },
-  "dependencies": {}
+  }
 }
